# my_serving

./: README
Data/: README  test.prototxt
Tools/: README
Tools/auto_caffe/: CMakeLists.txt
Tools/auto_caffe/cmake/: Dependencies.cmake  Targets.cmake  Targets.cmake~
Tools/auto_caffe/examples/FRCNN/: test_frcnn.cpp
Tools/auto_caffe/examples/FRCNN/config/: voc_config.json
Tools/auto_caffe/include/caffe/: blob.hpp
Tools/auto_caffe/include/caffe/FRCNN/: frcnn_api.hpp  frcnn_proposal_layer.hpp
Tools/auto_caffe/include/caffe/FRCNN/util/: frcnn_utils.hpp
Tools/auto_caffe/include/caffe/layers/: proposal_layer.hpp
Tools/auto_caffe/src/caffe/: CMakeLists.txt  blob.cpp  data_transformer.cpp  net.cpp  solver.cpp  solver.cpp.orig
Tools/auto_caffe/src/caffe/FRCNN/: Faster_Inference.cpp  Faster_Inference.cu  frcnn_api.cpp
Tools/auto_caffe/src/caffe/FRCNN/util/: frcnn_config.cpp
Tools/auto_caffe/src/caffe/SpeedUp/: Mask_Conv_Layer.cu  split_concat_layer.cpp
Tools/auto_caffe/src/caffe/layers/: proposal_layer.cpp  proposal_layer.cu
Tools/auto_caffe/src/caffe/proto/: caffe.proto
Tools/auto_caffe/src/caffe/util/: nms.cu
Tools/auto_yolo/: CMakeLists.txt
Tools/auto_yolo/api/: CMakeLists.txt  CMakeLists.txt~  detector.c
Tools/auto_yolo/cmake/: Dependencies.cmake  cuda.cmake
Tools/auto_yolo/src/: CMakeLists.txt  darknet.c  detector.c  detector_util.c
Tools/tensorflow_label_image/: CMakeLists.txt  README  main.cc
Tools/tf_image_recognition/: CMakeLists.txt  README.md  bsDES.h  generate_tf_project.sh  main.cc
Tools/tf_object_detection/: CMakeLists.txt  README  cv_process.cpp  cv_process.hpp  object_detection.cc
